--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to AJAX Practice Tasks</title>
-    <script src="src/index.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Dog CEO</h1>
@@ -15,6 +15,7 @@
     <hr>
     <label for="select-breed">Filter Breeds That Start with:</label>
     <select id="breed-dropdown" name="select-breed">
+      <option value="none">pick one</option>
       <option value="a">a</option>
       <option value="b">b</option>
       <option value="c">c</option>
@@ -24,6 +25,6 @@
     <ul id="dog-breeds">
 
     </ul>
-
+    <script src="src/index.js" charset="utf-8"></script>
   </body>
 </html>
